citizenship, languages prevent multiple selection mobile fixed

--- a/schmodel-registration-frontend/src/app/pages/edit-profile/edit-profile.component.scss
+++ b/schmodel-registration-frontend/src/app/pages/edit-profile/edit-profile.component.scss
@@ -138,6 +138,8 @@ accordion.edit-profile {
       background: none !important;
       border: none;
       border-bottom: 1px solid $border-color;
+      border-radius: 0;
+      box-shadow: none;
       &[type="password"] {
         letter-spacing: 2px;
       }
